Improve code styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-html,
-body,
-#root {
+html, body, #root {
     height: 100%;
 }
 
@@ -14,6 +12,5 @@ body {
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
